--- a/index.html
+++ b/index.html
@@ -89,18 +89,13 @@
         </div>
 
         <p class="typer" data-typer-targets='{"targets":[
-        "Web Design · Front-End Development",
-        "UX Design · Front-End Development",
-        "Responsive Design · Front-End Development",
-        "Responsive Design · Mobile Development",
-        "Interactive Design · Mobile Development",
+        "Systems Design · Full-Stack Development",
+        "Scalable Design · Full-Stack Development",
+        "Scalable Design · Machine Learning Development",
+        "Data analytics · Machine Learning Development",
+        "Data analytics · Chat-Bot Development",
         "Interactive Design · Chat-Bot Development",
-        "Responsive Design · Chat-Bot Development",
-        "Responsive Design · Object-Oriented Development",
-        "Creative Design · Object-Oriented Development",
-        "Scalable Design · Object-Oriented Development",
-        "Scalable Design · Back-End Development",
-        "Web Design · Back-End Development"
+        "Interactive Design · Full-Stack Development"
         ]}'></p>
       </div>
       <div class="icons-list">
