Add new bg for Gesture and add project ramsay

--- a/index.html
+++ b/index.html
@@ -186,6 +186,14 @@
       </p>
     </div>
     <div class="subsection-orange">
+      <div id="scout" class="zoom">
+          <div class="work-title"><a>Scout</a></div>
+          <div class="tag-line">Emotional Data Analytics</div>
+          <div>
+            <button class="bttn-unite bttn-sm bttn-primary plink"><a href="https://github.com/jsshao/hackthevalley">GITHUB</a></button>
+            <button class="bttn-unite bttn-sm bttn-primary plink"><a href="https://devpost.com/software/scout-rb3gej">DEVPOST</a></button>
+          </div>
+      </div>
       <div id="gestur" class="zoom">
           <div class="work-title"><a>Gestur</a></div>
           <div class="tag-line">Sign Language Interpreter</div>
@@ -194,12 +202,12 @@
               <button class="bttn-unite bttn-sm bttn-primary plink"><a href="https://devpost.com/software/gestur">DEVPOST</a></button>
           </div>
       </div>
-      <div id="scout" class="zoom">
-          <div class="work-title"><a>Scout</a></div>
-          <div class="tag-line">Emotional Data Analytics</div>
+      <div id="ramsay" class="zoom">
+          <div class="work-title"><a>Ramsay</a></div>
+          <div class="tag-line">Lifestyle Coaching</div>
           <div>
-            <button class="bttn-unite bttn-sm bttn-primary plink"><a href="https://github.com/jsshao/hackthevalley">GITHUB</a></button>
-            <button class="bttn-unite bttn-sm bttn-primary plink"><a href="https://devpost.com/software/scout-rb3gej">DEVPOST</a></button>
+              <button class="bttn-unite bttn-sm bttn-primary plink"><a href="https://github.com/mcotse/AlexaRamsay">GITHUB</a></button>
+              <button class="bttn-unite bttn-sm bttn-primary plink"><a href="https://devpost.com/software/ramsay-nl32ya">DEVPOST</a></button>
           </div>
       </div>
       <div id="watchr" class="zoom">
