Remove default css flip on word ends

--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
           <span class="letter blue" data-letter="T">T</span>
           <span class="letter blue" data-letter="H">H</span>
           <span class="letter blue" data-letter="E">E</span>
-          <span class="letter-lifted blue" data-letter="W">W</span>
+          <span class="letter blue" data-letter="W">W</span>
         </div>
         <div id="mobile-breakline"></div>
         <div>
           <span class="letter blue" data-letter="T">T</span>
           <span class="letter blue" data-letter="S">S</span>
-          <span class="letter-lifted blue" data-letter="E">E</span>
+          <span class="letter blue" data-letter="E">E</span>
         </div>
 
         <p class="typer" data-typer-targets='{"targets":[
@@ -133,7 +133,7 @@
         <span class="letter grey" data-letter="B">B</span>
         <span class="letter grey" data-letter="O">O</span>
         <span class="letter grey" data-letter="U">U</span>
-        <span class="letter-lifted grey" data-letter="T">T</span>
+        <span class="letter grey" data-letter="T">T</span>
       </div>
       <p class="white nav underline-hover">
         <a class="about-nav">ABOUT</a>/
@@ -177,7 +177,7 @@
         <span class="letter--black blue" data-letter="W">W</span>
         <span class="letter--black blue" data-letter="O">O</span>
         <span class="letter--black blue" data-letter="R">R</span>
-        <span class="letter-lifted--black blue" data-letter="K">K</span>
+        <span class="letter--black blue" data-letter="K">K</span>
       </div>
       <p class="nav underline-hover">
         <a class="about-nav">ABOUT</a>/
@@ -237,7 +237,7 @@
         <span class="letter purple" data-letter="T">T</span>
         <span class="letter purple" data-letter="A">A</span>
         <span class="letter purple" data-letter="C">C</span>
-        <span class="letter-lifted purple" data-letter="T">T</span>
+        <span class="letter purple" data-letter="T">T</span>
       </div>
       <p class="white nav underline-hover">
         <a class="about-nav">ABOUT</a>/
