--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
             Say <a href="mailto:hello@matthewtse.xyz">hello@matthewtse.xyz</a><br />
           </p>
           <p>
-            Protrait images courtesy of <a href="https://anthonychan1211.github.io/">Anthony Photography</a></br>
+            Portrait images courtesy of <a href="https://anthonychan1211.github.io/">Anthony Photography</a></br>
           </p>
           <p>
             Matthew Tse © 2017
