--- a/index.html
+++ b/index.html
@@ -154,13 +154,13 @@
                 WHO I AM
             </div>
             Current computer engineering disciple @ uWaterloo class of '17</br>
-            Past NLP engineer @ <a href="https://www.admithub.com/">Admithub</a>, Harvard Launch Lab.
+            Past NLP engineer @ <a href="https://www.admithub.com/" target="_blank">Admithub</a>, Harvard Launch Lab.
             <br/>
             <br/>
             Love exciting tech 🤖<br/>
             Passionate about making and eating food 🍜<br/>
             Crazy for badminton 🏸</br/><br/>
-            I enjoy coming up with <a href="https://www.youtube.com/watch?v=ARrr4cOuzj0">strategic</a> and creative solutions to solve interesting problems.<br /><br />
+            I enjoy coming up with <a href="https://www.youtube.com/watch?v=ARrr4cOuzj0" target="_blank">strategic</a> and creative solutions to solve interesting problems.<br /><br />
             <div class="subtitle">
               WHAT I'M UP TO
             </div>
@@ -190,39 +190,39 @@
           <div class="work-title"><a>Scout</a></div>
           <div class="tag-line">Emotional Data Analytics</div>
           <div>
-            <button class="bttn-unite bttn-sm bttn-primary plink"><a href="https://github.com/jsshao/hackthevalley">GITHUB</a></button>
-            <button class="bttn-unite bttn-sm bttn-primary plink"><a href="https://devpost.com/software/scout-rb3gej">DEVPOST</a></button>
+            <button class="bttn-unite bttn-sm bttn-primary plink"><a href="https://github.com/jsshao/hackthevalley" target="_blank">GITHUB</a></button>
+            <button class="bttn-unite bttn-sm bttn-primary plink"><a href="https://devpost.com/software/scout-rb3gej" target="_blank">DEVPOST</a></button>
           </div>
       </div>
       <div id="gestur" class="zoom">
           <div class="work-title"><a>Gestur</a></div>
           <div class="tag-line">Sign Language Interpreter</div>
           <div>
-              <button class="bttn-unite bttn-sm bttn-primary plink"><a href="https://github.com/k-yang/spartahack">GITHUB</a></button>
-              <button class="bttn-unite bttn-sm bttn-primary plink"><a href="https://devpost.com/software/gestur">DEVPOST</a></button>
+              <button class="bttn-unite bttn-sm bttn-primary plink"><a href="https://github.com/k-yang/spartahack" target="_blank">GITHUB</a></button>
+              <button class="bttn-unite bttn-sm bttn-primary plink"><a href="https://devpost.com/software/gestur" target="_blank">DEVPOST</a></button>
           </div>
       </div>
       <div id="ramsay" class="zoom">
           <div class="work-title"><a>Ramsay</a></div>
           <div class="tag-line">Lifestyle Coaching</div>
           <div>
-              <button class="bttn-unite bttn-sm bttn-primary plink"><a href="https://github.com/mcotse/AlexaRamsay">GITHUB</a></button>
-              <button class="bttn-unite bttn-sm bttn-primary plink"><a href="https://devpost.com/software/ramsay-nl32ya">DEVPOST</a></button>
+              <button class="bttn-unite bttn-sm bttn-primary plink"><a href="https://github.com/mcotse/AlexaRamsay" target="_blank">GITHUB</a></button>
+              <button class="bttn-unite bttn-sm bttn-primary plink"><a href="https://devpost.com/software/ramsay-nl32ya" target="_blank">DEVPOST</a></button>
           </div>
       </div>
       <div id="watchr" class="zoom">
           <div><a class="work-title">Watchr</a></div>
           <div class="tag-line">Real Time Crisis Management</div>
           <div>
-              <button class="bttn-unite bttn-sm bttn-primary plink"><a href="https://github.com/marwanad/Watchr">GITHUB</a></button>
-              <button class="bttn-unite bttn-sm bttn-primary plink"><a href="https://devpost.com/software/watchr-1s3cqu">DEVPOST</a></button>
+              <button class="bttn-unite bttn-sm bttn-primary plink"><a href="https://github.com/marwanad/Watchr" target="_blank">GITHUB</a></button>
+              <button class="bttn-unite bttn-sm bttn-primary plink"><a href="https://devpost.com/software/watchr-1s3cqu" target="_blank">DEVPOST</a></button>
           </div>
       </div>
       <div id="uwparkingbot" class="zoom">
           <div class="work-title"><a>UW Parking Bot</a></div>
           <div class="tag-line">Parking Availability Chatbot</div>
           <div>
-              <button class="bttn-unite bttn-sm bttn-primary plink"><a href="https://www.facebook.com/uwparkinglots/">FACEBOOK</a></button>
+              <button class="bttn-unite bttn-sm bttn-primary plink"><a href="https://www.facebook.com/uwparkinglots/" target="_blank">FACEBOOK</a></button>
           </div>
       </div>
     </div>
