Add snapchat icon

--- a/index.html
+++ b/index.html
@@ -269,6 +269,11 @@
                 <i class='fa fa-lg fa-instagram'></i>
               </a>
             </li>
+            <li class='snapchat'>
+              <a target="_blank" href="https://www.snapchat.com/add/matttse">
+                <i class='fa fa-lg fa-snapchat-ghost'></i>
+              </a>
+            </li>
             <li class='facebook'>
               <a target="_blank" href="https://www.facebook.com/mcotse">
                 <i class='fa fa-lg fa-facebook-official'></i>
