Add commented out code for banner

--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
     </div>
     <div class="subsection-orange">
       <div id="scout" class="zoom">
+          <!-- <div class="ribbon-wrapper-green"><div class="ribbon-green">Winner</div></div> -->
           <div class="work-title"><a>Scout</a></div>
           <div class="tag-line">Emotional Data Analytics</div>
           <div>
@@ -195,6 +196,7 @@
           </div>
       </div>
       <div id="gestur" class="zoom">
+          <!-- <div class="ribbon-wrapper-green"><div class="ribbon-green">Winner</div></div> -->
           <div class="work-title"><a>Gestur</a></div>
           <div class="tag-line">Sign Language Interpreter</div>
           <div>
@@ -203,6 +205,7 @@
           </div>
       </div>
       <div id="ramsay" class="zoom">
+          <!-- <div class="ribbon-wrapper-green"><div class="ribbon-green">Winner</div></div> -->
           <div class="work-title"><a>Ramsay</a></div>
           <div class="tag-line">Lifestyle Coaching</div>
           <div>
@@ -211,6 +214,7 @@
           </div>
       </div>
       <div id="watchr" class="zoom">
+          <!-- <div class="ribbon-wrapper-green"><div class="ribbon-green">Winner</div></div> -->
           <div><a class="work-title">Watchr</a></div>
           <div class="tag-line">Real Time Crisis Management</div>
           <div>
