--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <link rel="icon" type="image/png" href="assets/img/favicon-16x16.png" sizes="16x16">
   <!--favicon end-->
   <!-- <link rel="stylesheet" href="assets/stylesheets/pesticide.css"> -->
-  <link rel="stylesheet" type="text/css" href="assets/stylesheets/main.css" />
+  <link rel="stylesheet" type="text/css" href="assets/stylesheets/critical.css" />
 
   <!-- <link rel="stylesheet" type="text/css" href="assets/stylesheets/font-awesome.min.css" /> -->
 
