Update package description and clean up comments

--- a/index.html
+++ b/index.html
@@ -144,12 +144,6 @@
     <div class="subsection-white">
       <div class="about">
         <div class="text">
-          <!-- <p> -->
-            <!-- <div class="subtitle">
-              WELCOME
-            </div>
-            Ayyy hello!  <br />
-            Welcome to my personal site - a window I've built to showcase my work, my skills and who I am. Go ahead and check it out, I hope you enjoy the tour and get to learn a little more about me in the process. <br /><br /> -->
             <div class="subtitle">
                 WHO I AM
             </div>
@@ -298,12 +292,10 @@
     </div>
     <div class="clear"></div>
   </section>
+  <link rel="stylesheet" type="text/css" href="assets/stylesheets/main.css" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <!-- <script src="https://cdn.jsdelivr.net/jquery.typeit/4.2.3/typeit.min.js"></script> -->
   <script src="assets/javascript/typer.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Lato:400,900" rel="stylesheet">
-
-  <!-- <script src="assets/javascript/headroom.js"></script> -->
   <script src="assets/javascript/main.js"></script>
   <script src="assets/javascript/instaclick.js" data-no-instant></script>
   <script data-no-instant>InstantClick.init();</script>
