--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <div class="subtitle">
                 WHO I AM
             </div>
-            Current Software Engineer @ <a href="https://www.creditkarma.com/" target="_blank">Credit Karma</a> in SF
+            Current Software Engineer @ <a href="https://www.creditkarma.com/" target="_blank">Credit Karma</a> in SF</br>
             Past computer engineering disciple @ uWaterloo class of '17</br>
             Past NLP engineer @ <a href="https://www.admithub.com/" target="_blank">Admithub</a>, Harvard Launch Lab
             <br/>
