--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
         <br />
         <div class="footer">
           <p>
-            Say <a href="mailto:hello@matthewtse.xyz">hello@matthewtse.xyz</a><br />
+            Say hello through <a href="https://www.linkedin.com/in/mcotse">Linkedin</a><br />
           </p>
           <p>
             Portrait images courtesy of <a href="https://anthonychan1211.github.io/">Anthony Photography</a></br>
